[package]
name = "particles"
version = "0.1.0"
edition = "2021"
description = "一个精致的粒子互动WASM小程序"
authors = ["Your Name"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlCanvasElement", "CanvasRenderingContext2d",
    "Performance", "MouseEvent", "EventTarget", "console", "DomRect"
]}
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 3
lto = true
