[package]
name = "wasm_game"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3.61"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'MouseEvent',
  'EventListener',
  'console',
  'Performance',
  'DomRect',
]

[profile.release]
opt-level = "s"
